kubernetes/dumbpad/AIO.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dumbpad-dep
  namespace: dumbpad-ns
  labels:
    app: dumbpad
spec:
  selector:
    matchLabels:
      app: dumbpad
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dumbpad
    spec:
      containers:
        - name: dumbpad
          image: dumbwareio/dumbpad:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 3000
              name: dumbpad
          volumeMounts:
            - name: dumbpad-data
              mountPath: /app/data
      volumes:
        - name: dumbpad-data
          hostPath:
            path: /mnt/ssd/kubernetes/dumbpad
---
apiVersion: v1
kind: Service
metadata:
  name: dumbpad-svc
  namespace: dumbpad-ns
spec:
  selector:
    app: dumbpad
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: dumbpad
    protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dumbpad-ingress
  namespace: dumbpad-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: dumbpad.devopsindia.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dumbpad-svc
                port:
                  number: 3000
